--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,10 +26,10 @@
     <string name="textview">TextView</string>
     <string name="message_with_me">Message With Me</string>
     <string name="image">Image</string>
-    <string name="todo">TODO</string>
-    <string name="android_charting_application_xml_ui_design_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_android_charting_application_xml_ui_design">Android charting application xml ui design. Android charting application xml ui design tutorial with example. Android charting application xml ui design. Android charting application xml ui design.</string>
     <string name="android_charting_application_xml_ui_design_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_android_charting_application_xml_ui_design">Android charting application xml ui design. Android charting application xml ui design tutorial with example. Android charting application xml ui design. Android charting application xml ui design.</string>
     <string name="android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example">Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example.</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
+    <string name="select_user_for_chat">Select user for chat</string>
+    <string name="enter_name">Enter Name</string>
+    <string name="message">Message</string>
+    <string name="write_a_message">Write a message</string>
 </resources>
